Chart loading indicator added. Added latest improvements to to upstream i.e: CSRF token for Ajax

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 			<div id="frame-2" class="frame fade slow">
 				<h1>Frame 2</h1>
 				<div class="loading"></div>
+				<div class="loading-graph" style="margin-top:100px;">
+					<div class="rect1"></div><div class="rect2"></div><div class="rect3"></div><div class="rect4"></div>
+				</div>
 				<center class="bottom">
 					<a class="button" href="#frame-1"><i class="fa fa-arrow-left"></i> Go to previous frame</a>
 					<a class="button" href="#frame-3">Go to next frame <i class="fa fa-arrow-right"></i></a>
